--- a/css/styles.css
+++ b/css/styles.css
@@ -22,6 +22,7 @@ p {
   margin-top: 0;
   margin-bottom: 0;
 }
+
 .header {
   background-color: #ffffff;
   height: auto;
@@ -30,6 +31,11 @@ p {
   box-shadow: 0px 1px 6px 0px rgba(46, 47, 66, 0.08),
     0px 1px 1px 0px rgba(46, 47, 66, 0.16),
     0px 2px 1px 0px rgba(46, 47, 66, 0.08);
+}
+@media screen and (max-width: 767.9px) {
+  .header {
+    padding: 16px 0;
+  }
 }
 .header-container {
   display: flex;
@@ -47,12 +53,28 @@ img {
 }
 .container {
   max-width: 320px;
-  padding: 0 15px;
+  padding: 0 16px;
   margin: 0 auto;
+}
+@media screen and (min-width: 768px) {
+  .container {
+    max-width: 768px;
+  }
+}
+@media screen and (min-width: 1158px) {
+  .container {
+    max-width: 1158px;
+    padding: 0 15px;
+  }
 }
 
 .section {
   padding: 120px 0;
+}
+@media screen and (min-width: 1158px) {
+  .section {
+    padding: 120px 0;
+  }
 }
 /* logo style */
 
@@ -60,7 +82,7 @@ img {
   text-decoration: none;
   text-transform: uppercase;
   color: #4d5ae5;
-  font-size: 18px;
+  font-size: 16px;
   font-family: 'Raleway', sans-serif;
   font-weight: 700;
   line-height: 1.17; /* 116.667% */
@@ -82,10 +104,15 @@ img {
   color: #404bbf;
 }
 .nav-menu {
-  display: flex;
-  align-items: flex-start;
-  gap: 40px;
-  flex-grow: 1;
+  display: none;
+}
+@media screen and (min-width: 768px) {
+  .nav-menu {
+    display: flex;
+    align-items: flex-start;
+    gap: 40px;
+    flex-grow: 1;
+  }
 }
 .nav-menu-item {
   text-decoration: none;
@@ -123,11 +150,6 @@ img {
 }
 
 .address-list {
-  font-style: normal;
-  display: flex;
-  align-items: flex-end;
-  gap: 40px;
-  flex-grow: 1;
 }
 .address-link {
   font-size: 16px;
@@ -137,8 +159,27 @@ img {
   text-decoration: none;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-/* MOBILE MENU */
+.address {
+  font-style: normal;
+  display: none;
+}
+@media screen and (min-width: 768px) {
+  .address {
+    display: block;
+  }
+  .address-list {
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
+  }
+}
+@media screen and (min-width: 1158px) {
+  .address-list {
+    flex-direction: row;
+    gap: 40px;
+  }
+}
+/* ------ Mobile Menu ------*/
 .open-menu-button {
   background-color: transparent;
   border-style: none;
@@ -146,7 +187,12 @@ img {
   width: 24px;
   height: 24px;
   margin-bottom: 16px;
-  margin-left: 16px;
+  margin-top: 16px;
+}
+@media screen and (min-width: 768px) {
+  .open-menu-button {
+    display: none;
+  }
 }
 .open-menu-icon {
   display: flex;
@@ -166,7 +212,6 @@ img {
   top: 24px;
   right: 24px;
   background-color: rgba(231, 233, 252, 0.1);
-  fill: #2f2f37;
   border: 1px solid rgba(0, 0, 0, 0.1);
   padding: 0;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
@@ -190,21 +235,23 @@ img {
 .mobile-menu {
   display: flex;
   flex-direction: column;
-  min-width: 320px;
+  width: 100%;
   height: 100vh;
-  padding: 72px 24px 40px 16px;
-  flex-shrink: 0;
+  padding: 72px 16px 40px 16px;
   position: fixed;
   left: 0;
   top: 0;
-  z-index: 1;
   justify-content: space-between;
-  align-items: flex-start;
-  padding-left: 16px;
   opacity: 0;
   visibility: hidden;
-  background-color: #fcfcfc;
+  background-color: #ffffff;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+/* .is-open {
+  opacity: 1;
+  visibility: visible;
+} */
 .mobile-menu-list {
   display: flex;
   flex-direction: column;
@@ -216,9 +263,6 @@ img {
   font-weight: 700;
   line-height: 1.5;
   letter-spacing: 0.02em;
-}
-.mobile-menu-item:first-child .mobile-menu-link {
-  color: #404bbf;
 }
 .mob-menu-link {
   display: flex;
@@ -233,6 +277,9 @@ img {
   line-height: 1.11;
   letter-spacing: 0.02em;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.link-active {
+  color: #404bbf;
 }
 .mobile-menu-link:hover,
 .mobile-menu-link:focus {
@@ -253,7 +300,7 @@ img {
   text-decoration: none;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.mobile-address-item:first-child .mobile-address-link {
+.address-active {
   color: #4d5ae5;
 }
 .mobile-address-link:hover,
@@ -262,8 +309,8 @@ img {
 }
 .mobile-icons-list {
   display: flex;
-  justify-content: center;
-  gap: 40px;
+  justify-content: space-between;
+  gap: 16px;
 }
 .mobile-icons-item {
   width: 40px;
@@ -287,11 +334,13 @@ img {
 .mobile-icon-elipse:focus {
   background-color: #404bbf;
 }
-/* Baner section style */
+
+/* ------ Baner section style ------ */
 
 .baner {
   background-color: #2e2f42;
   padding: 72px 0;
+  width: 100%;
   background-image: linear-gradient(
       rgba(46, 47, 66, 0.7),
       rgba(46, 47, 66, 0.7)
@@ -300,9 +349,57 @@ img {
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-  max-width: 320px;
-  min-height: 432px;
+  max-width: 1440px;
   margin: 0 auto;
+}
+@media screen and (min-device-pixel-ratio: 2), (min-resolution: 192dpi) {
+  .baner {
+    background-image: linear-gradient(
+        rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)
+      ),
+      url(../images/mobile-img/mobile-baner-bg@2x.jpg);
+  }
+}
+@media screen and (min-width: 768px) {
+  .baner {
+    padding: 112px 0;
+    background-image: linear-gradient(
+        rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)
+      ),
+      url(../images/tablet-img/tablet-baner-bg.jpg);
+  }
+}
+@media screen and (min-device-pixel-ratio: 2) and (min-width: 768px),
+  (min-resolution: 192dpi) and (min-width: 768px) {
+  .baner {
+    background-image: linear-gradient(
+        rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)
+      ),
+      url(../images/tablet-img/tablet-baner-bg@2x.jpg);
+  }
+}
+@media screen and (min-width: 1158px) {
+  .baner {
+    padding: 188px 0;
+    background-image: linear-gradient(
+        rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)
+      ),
+      url(../images/desktop-img/desktop-baner-bg.jpg);
+  }
+}
+@media screen and (min-device-pixel-ratio: 2) and (min-width: 1158px),
+  (min-resolution: 192dpi) and (min-width: 1158px) {
+  .baner {
+    background-image: linear-gradient(
+        rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)
+      ),
+      url(../images/desktop-img/desktop-baner-bg@2x.jpg);
+  }
 }
 .baner-container {
   text-align: center;
@@ -321,6 +418,18 @@ img {
   letter-spacing: 0.02em;
   margin-bottom: 48px;
   max-width: 160px;
+}
+@media screen and (min-width: 768px) {
+  .baner-title {
+    font-size: 56px;
+    margin-bottom: 36px;
+    max-width: 496px;
+  }
+}
+@media screen and (min-width: 1158px) {
+  .baner-title {
+    margin-bottom: 48px;
+  }
 }
 
 .baner-button {
@@ -349,7 +458,7 @@ img {
   background-color: #404bbf;
 }
 
-/* Features section style */
+/* ------ Features section style ------ */
 
 .features-container {
   background-color: #ffffff;
@@ -368,53 +477,90 @@ img {
 }
 .features-list {
   display: flex;
-  align-items: flex-start;
-  gap: 24px;
+  gap: 72px 24px;
   flex-direction: column;
 }
-.features-list-content {
-  width: calc((100% - 3 * 24px) / 4);
+@media screen and (min-width: 768px) {
+  .features-list {
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
+  .features-list-content {
+    width: calc((100% - 1 * 24px) / 2);
+  }
+}
+@media screen and (min-width: 1158px) {
+  .features-list-content {
+    width: calc((100% - 3 * 24px) / 4);
+  }
 }
 .features-title {
-  font-size: 20px;
-  font-weight: 500;
+  font-size: 36px;
+  font-weight: 700;
   line-height: 1.2; /* 120% */
   letter-spacing: 0.4px;
   color: #2e2f42;
   margin-bottom: 8px;
+  text-align: center;
+}
+@media screen and (min-width: 768px) {
+  .features-title {
+    text-align: left;
+  }
+}
+@media screen and (min-width: 1158px) {
+  .features-title {
+    font-size: 20px;
+    font-weight: 500;
+  }
 }
 
 .features-content {
   font-size: 16px;
   line-height: 1.5; /* 150% */
   letter-spacing: 0.32px;
-  width: 264px;
+  font-weight: 500;
+}
+@media screen and (min-width: 1158px) {
+  .features-content {
+    font-weight: 400;
+  }
+}
+.features-icon-container {
+  display: none;
+}
+@media screen and (min-width: 1158px) {
+  .features-icon-container {
+    height: 112px;
+    flex-shrink: 0;
+    border-radius: 4px;
+    border: 1px solid #8e8f99;
+    background-color: #f4f4fd;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 8px;
+  }
 }
 
-.features-icon-container {
-  height: 112px;
-  flex-shrink: 0;
-  border-radius: 4px;
-  border: 1px solid #8e8f99;
-  background-color: #f4f4fd;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin-bottom: 8px;
-}
-/* Team section style */
+/* ------ Team section style  ------ */
 
 .team-container {
   background-color: #f4f4fd;
-  /* height: 732px; */
-  width: 100%;
-  padding: 96px 0;
 }
 .team-card-list {
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
-  gap: 72px;
+  gap: 72px 24px;
+}
+@media screen and (min-width: 768px) {
+  .team-card-list {
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 64px 24px;
+    justify-content: center;
+  }
 }
 .team-container-title {
   text-align: center;
@@ -434,12 +580,15 @@ img {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  width: 100%;
   box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08),
     0px 1px 1px 0px rgba(46, 47, 66, 0.16),
     0px 1px 6px 0px rgba(46, 47, 66, 0.08);
 }
-
+@media screen and (min-width: 1158px) {
+  .team-card {
+    width: calc((100% - 3 * 24px) / 4);
+  }
+}
 .team-member-info {
   padding: 32px 0;
 }
@@ -490,7 +639,8 @@ img {
 .cards-icon-elipse:focus {
   background-color: #404bbf;
 }
-/* Portfolio section style */
+
+/* ------ Portfolio section style ------*/
 
 .portfilio-container {
   background-color: #ffffff;
@@ -510,13 +660,35 @@ img {
 .portfolio-cards-list {
   display: flex;
   gap: 24px;
-  flex-wrap: wrap;
-  justify-content: space-between;
+  flex-direction: column;
   row-gap: 48px;
 }
+@media screen and (min-width: 768px) {
+  .portfolio-cards-list {
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 72px 24px;
+  }
+}
+@media screen and (min-width: 1158px) {
+  .portfolio-cards-list {
+    gap: 48px 24px;
+  }
+}
 .portfolio-cards {
-  width: calc((100% - 2 * 24px) / 3);
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  box-shadow: 0 1px 6px 0 rgba(46, 47, 66, 0.08);
+}
+@media screen and (min-width: 768px) {
+  .portfolio-cards {
+    width: calc((100% - 1 * 24px) / 2);
+  }
+}
+@media screen and (min-width: 1158px) {
+  .portfolio-cards {
+    width: calc((100% - 2 * 24px) / 3);
+    box-shadow: none;
+  }
 }
 .portfolio-cards-title {
   font-size: 20px;
@@ -565,13 +737,22 @@ img {
   letter-spacing: 0.32px;
 }
 
-/* Footer section style */
-
+/* ------ Footer section style ------ */
 .footer-container {
   background-color: #2e2f42;
-  padding: 100px 0;
+  padding: 96px 0;
 }
-
+@media screen and (min-width: 768px) {
+  .footer-container {
+    padding-left: 92px;
+    padding-right: 92px;
+  }
+}
+@media screen and (min-width: 1158px) {
+  .footer-container {
+    padding: 100px 0;
+  }
+}
 .footer-logo {
   color: #4d5ae5;
   font-family: 'Raleway', sans-serif;
@@ -581,8 +762,8 @@ img {
   letter-spacing: 0.54px;
   text-transform: uppercase;
   text-decoration: none;
+  display: inline-flex;
   align-items: center;
-  display: inline-block;
   margin-bottom: 16px;
 }
 .footer-logo-part {
@@ -593,20 +774,50 @@ img {
   line-height: 1.5; /* 150% */
   letter-spacing: 0.32px;
   color: #f4f4fd;
-  width: 264px;
+  text-align: left;
 }
 .footer-content-container {
   display: block;
   margin-left: 0;
-  margin-right: 120px;
+  text-align: center;
+}
+@media screen and (min-width: 768px) {
+  .footer-content-container {
+    width: 264px;
+    text-align: left;
+  }
+}
+@media screen and (min-width: 1158px) {
+  .footer-content-container {
+    margin-right: 120px;
+  }
 }
 
 .footer-content {
   display: flex;
-  align-items: baseline;
+  flex-direction: column;
+  align-items: center;
+  gap: 72px 24px;
+}
+@media screen and (min-width: 768px) {
+  .footer-content {
+    align-items: baseline;
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
+}
+@media screen and (min-width: 1158px) {
+  .footer-content {
+    gap: 0;
+  }
 }
 .footer-social-media {
   display: block;
+}
+@media screen and (min-width: 1158px) {
+  .footer-social-media {
+    margin-right: auto;
+  }
 }
 .footer-icons-list {
   display: flex;
@@ -635,6 +846,12 @@ img {
   letter-spacing: 0.32px;
   color: #ffffff;
   margin-bottom: 16px;
+  text-align: center;
+}
+@media screen and (min-width: 768px) {
+  .footer-media-title {
+    text-align: left;
+  }
 }
 .footer-icons {
   width: 40px;
@@ -645,12 +862,16 @@ img {
   fill: #f4f4fd;
 }
 
-/* Footer subscribe */
+/* ------ Footer subscribe ----- */
 .footer-subscribe {
   display: block;
-  margin-left: auto;
+  width: 100%;
 }
-
+@media screen and (min-width: 768px) {
+  .footer-subscribe {
+    width: auto;
+  }
+}
 .subscribe-title {
   font-size: 16px;
   font-weight: 500;
@@ -658,18 +879,29 @@ img {
   letter-spacing: 0.32px;
   margin-bottom: 16px;
   color: #ffffff;
+  text-align: center;
+}
+@media screen and (min-width: 768px) {
+  .subscribe-title {
+    text-align: left;
+  }
 }
 .subscribe-label {
-  display: inline-flex;
-  gap: 24px;
+  width: 100%;
 }
 .subscribe-form {
   display: flex;
-  align-items: flex-end;
-  gap: 24px;
+  flex-direction: column;
+  gap: 16px;
+  align-items: center;
+}
+@media screen and (min-width: 768px) {
+  .subscribe-form {
+    flex-direction: row;
+  }
 }
 .subscribe-input {
-  width: 264px;
+  width: 100%;
   flex-shrink: 0;
   border-radius: 4px;
   border: 1px solid #ffffff;
@@ -682,6 +914,11 @@ img {
   padding-left: 16px;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   height: 40px;
+}
+@media screen and (min-width: 768px) {
+  .subscribe-input {
+    width: 264px;
+  }
 }
 .subscribe-input:hover,
 .subscribe-input:focus {
@@ -722,7 +959,7 @@ img {
   background-color: #404bbf;
 }
 
-/* Modal and backdrop style */
+/* ------ Modal and backdrop style ------ */
 .backdrop {
   visibility: hidden;
   opacity: 0;
@@ -735,12 +972,13 @@ img {
   height: 100%;
   background-color: rgba(46, 47, 66, 0.4);
 }
+
 /* .open {
   opacity: 1;
   visibility: visible;
 } */
 .modal {
-  width: 408px;
+  width: calc(100% - 32px);
   padding: 72px 24px 24px 24px;
   flex-shrink: 0;
   position: absolute;
@@ -755,6 +993,12 @@ img {
     0px 2px 1px rgba(0, 0, 0, 0.2);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+@media screen and (min-width: 768px) {
+  .modal {
+    width: 408px;
+  }
+}
+
 .modal-title {
   font-size: 16px;
   font-weight: 500;
@@ -765,7 +1009,7 @@ img {
   color: #2e2f42;
 }
 
-/* Close button style */
+/* ------ Close button style ------ */
 .close-button {
   position: absolute;
   top: 24px;
@@ -800,7 +1044,7 @@ img {
   fill: #ffffff;
 }
 
-/* Form input style */
+/* ------ Form input style ------ */
 .form {
   display: flex;
   flex-direction: column;
@@ -822,7 +1066,7 @@ img {
 }
 .form-input {
   height: 40px;
-  width: 360px;
+  width: 100%;
   border-radius: 4px;
   border: 1px solid rgba(46, 47, 66, 0.4);
   padding-left: 38px;
@@ -851,7 +1095,7 @@ img {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-/* Form textarea style */
+/* ------ Form textarea style ------ */
 .textarea-field {
   display: flex;
   flex-direction: column;
@@ -882,6 +1126,8 @@ img {
 .form-textarea::placeholder {
   color: rgba(46, 47, 66, 0.4);
 }
+
+/* ------ Checbox and Privacy Police style ------ */
 .checkbox-field {
   margin-bottom: 24px;
   display: flex;
@@ -895,6 +1141,8 @@ img {
   font-size: 12px;
   line-height: 1.17; /* 116.667% */
   letter-spacing: 0.48px;
+  display: flex;
+  align-items: center;
 }
 .checkmark {
   display: inline-flex;
@@ -927,6 +1175,8 @@ img {
   letter-spacing: 0.48px;
   text-decoration-line: underline;
 }
+
+/* ------ Modal send button style ------ */
 .modal-send-btn {
   cursor: pointer;
   padding: 16px 32px;
