--- a/css/styles.css
+++ b/css/styles.css
@@ -69,7 +69,7 @@ img {
 }
 
 .section {
-  padding: 120px 0;
+  padding: 96px 0;
 }
 @media screen and (min-width: 1158px) {
   .section {
@@ -186,8 +186,6 @@ img {
   cursor: pointer;
   width: 24px;
   height: 24px;
-  margin-bottom: 16px;
-  margin-top: 16px;
 }
 @media screen and (min-width: 768px) {
   .open-menu-button {
@@ -248,10 +246,10 @@ img {
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
     visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-/* .is-open {
+.mobile-menu.is-open {
   opacity: 1;
   visibility: visible;
-} */
+}
 .mobile-menu-list {
   display: flex;
   flex-direction: column;
@@ -972,11 +970,10 @@ img {
   height: 100%;
   background-color: rgba(46, 47, 66, 0.4);
 }
-
-/* .open {
+.backdrop.is-open {
   opacity: 1;
   visibility: visible;
-} */
+}
 .modal {
   width: calc(100% - 32px);
   padding: 72px 24px 24px 24px;
